@@ -657,3 +657,6 @@ focus.quelea=Shift focus to Quelea
 website.dialog.title=Web page URL
 website.dialog.header=Enter web page URL
 website.dialog.content=Enter the web page you would like to display:
+paste.label=Paste
+undo.label=Undo
+redo.label=Redo
